2024-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* macOS : Generate libraries for each platform
	* Updated using the latest nanovg ( https://github.com/memononen/nanovg/commit/f93799c078fa11ed61c078c65a53914c8782c00b )

2023-02-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using the latest nanovg ( https://github.com/memononen/nanovg/commit/7544c114e83db7cf67bd1c9e012349b70caacc2f )

2022-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using the latest nanovg ( https://github.com/memononen/nanovg/commit/397f3300bc14bdb856ec429c71c345ab0340b0a6 )

2022-01-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Changed API

2022-01-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Use opengl-bindings2

2022-01-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* nanovg-bindings.gemspec: Added

2021-12-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* libnanovg_gl2.dll, libnanovg_gl3.dll: Added Windows binary
	* demo/util: Added for automatic library loading
	* nanovg_dll/nanovg.c: Fixed for Windows build

2021-12-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* libnanovg_gl2.dylib, libnanovg_gl3.dylib: Built with latest nanovg ( https://github.com/memononen/nanovg/tree/645e9147a8701c98f52240257af0c9d5fa640e86 )
	* nanovg_dll: Use CMake / Scripts are now M1 mac ready
	* demo: Reorganized directory structure / Added several codes to run hole_polygon.ry demo / Fixed qrc.rb for the latest RQRCoce library

2018-10-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* nanovg.rb: Now compatible with the latest APIs (NanoVG Commit f4069e6a1ad5da430fb0a9c57476d5ddc2ff89b2 https://github.com/memononen/nanovg/commit/f4069e6a1ad5da430fb0a9c57476d5ddc2ff89b2 ).

2017-07-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* nanovg.rb: Now compatible with the latest APIs (NanoVG Commit 30e1c98175b30bcfd8f979f0813a97333329dfe2 https://github.com/memononen/nanovg/commit/30e1c98175b30bcfd8f979f0813a97333329dfe2).
