@@ -1,5 +1,5 @@
 NanoVG-Bindings : A Ruby bindings of NanoVG
-Copyright (c) 2015-2024 vaiorabbit
+Copyright (c) 2015-2025 vaiorabbit
 
 This software is provided 'as-is', without any express or implied
 warranty. In no event will the authors be held liable for any damages
